# speech-recognition

./: Dockerfile  README.md  install.sh  main.py  pyproject.toml  requirements.txt
